# dagster-and-dbt-2

./: README.md  dagster_cloud.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: branch_deployments.yml  deploy.yml
analytics/: profiles.yml
analytics/models/marts/: daily_metrics.sql
analytics/models/sources/: raw_service_requests.yml
analytics/models/staging/: staging.yml  stg_service_requests.sql
dagster_university/: __init__.py  definitions.py  project.py
dagster_university/assets/: constants.py  dbt.py  metrics.py  service_requests.py  trips.py
dagster_university/jobs/: __init__.py
dagster_university/partitions/: __init__.py
dagster_university/resources/: __init__.py
dagster_university/schedules/: __init__.py
